v0.10.0/_sources/gallery/maps/tilemaps.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/maps/tilemaps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_maps_tilemaps.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_maps_tilemaps.py:


Tile maps
---------
The :meth:`pygmt.Figure.tilemap` method allows to plot
tiles from a tile server or local file as a basemap or overlay.

.. GENERATED FROM PYTHON SOURCE LINES 7-27

.. code-block:: default

    import contextily
    import pygmt

    fig = pygmt.Figure()
    fig.tilemap(
        region=[-157.84, -157.8, 21.255, 21.285],
        projection="M12c",
        # Set level of details (0-22)
        # Higher levels mean a zoom level closer to the Earth's
        # surface with more tiles covering a smaller
        # geographic area and thus more details and vice versa
        # Please note, not all zoom levels are always available
        zoom=14,
        # Use tiles from OpenStreetMap tile server
        source="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
        frame="afg",
    )

    fig.show()




.. image-sg:: /gallery/maps/images/sphx_glr_tilemaps_001.png
   :alt: tilemaps
   :srcset: /gallery/maps/images/sphx_glr_tilemaps_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    grdimage [WARNING]: (w - x_min) must equal (NX + eps) * x_inc), where NX is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: w reset from -157.84 to -157.840070056
    grdimage [WARNING]: (e - x_min) must equal (NX + eps) * x_inc), where NX is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: e reset from -157.8 to -157.799990801
    grdimage [WARNING]: (s - y_min) must equal (NY + eps) * y_inc), where NY is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: s reset from 21.255 to 21.2549765742
    grdimage [WARNING]: (n - y_min) must equal (NY + eps) * y_inc), where NY is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: n reset from 21.285 to 21.2850360149




.. GENERATED FROM PYTHON SOURCE LINES 28-32

It's also possible to use tiles provided via the
`contextily <https://github.com/geopandas/contextily>`__
library. See :doc:`Contextily providers <contextily:providers_deepdive>`
for a list of possible tilemap options.

.. GENERATED FROM PYTHON SOURCE LINES 32-43

.. code-block:: default


    fig = pygmt.Figure()
    fig.tilemap(
        region=[-157.84, -157.8, 21.255, 21.285],
        projection="M12c",
        # Use the Stamen.Watercolor option from contextily
        source=contextily.providers.Stamen.Watercolor,
        frame="afg",
    )

    fig.show()



.. image-sg:: /gallery/maps/images/sphx_glr_tilemaps_002.png
   :alt: tilemaps
   :srcset: /gallery/maps/images/sphx_glr_tilemaps_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    grdimage [WARNING]: (w - x_min) must equal (NX + eps) * x_inc), where NX is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: w reset from -157.84 to -157.840016369
    grdimage [WARNING]: (e - x_min) must equal (NX + eps) * x_inc), where NX is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: e reset from -157.8 to -157.799990966
    grdimage [WARNING]: (s - y_min) must equal (NY + eps) * y_inc), where NY is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: s reset from 21.255 to 21.2549741829
    grdimage [WARNING]: (n - y_min) must equal (NY + eps) * y_inc), where NY is an integer and |eps| <= 0.0001.
    grdimage [WARNING]: n reset from 21.285 to 21.2850347554





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  4.232 seconds)


.. _sphx_glr_download_gallery_maps_tilemaps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: tilemaps.py <tilemaps.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: tilemaps.ipynb <tilemaps.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
