v0.19.0/_sources/gallery/maps/tilemaps.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/maps/tilemaps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_maps_tilemaps.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_maps_tilemaps.py:


Tile maps
=========

The :meth:`pygmt.Figure.tilemap` method allows to plot
tiles from a tile server or local file as a basemap or overlay.

.. GENERATED FROM PYTHON SOURCE LINES 10-31

.. code-block:: Python

    import contextily
    import pygmt
    from pygmt.params import Axis

    fig = pygmt.Figure()
    fig.tilemap(
        region=[-157.84, -157.8, 21.255, 21.285],
        projection="M12c",
        # Set level of details (0-22)
        # Higher levels mean a zoom level closer to the Earth's
        # surface with more tiles covering a smaller
        # geographic area and thus more details and vice versa
        # Please note, not all zoom levels are always available
        zoom=14,
        # Use tiles from OpenStreetMap tile server
        source="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
        frame=Axis(annot=True, tick=True, grid=True),
    )

    fig.show()




.. image-sg:: /gallery/maps/images/sphx_glr_tilemaps_001.png
   :alt: tilemaps
   :srcset: /gallery/maps/images/sphx_glr_tilemaps_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 32-36

It's also possible to use tiles provided via the
`contextily <https://github.com/geopandas/contextily>`__
library. See :doc:`Contextily providers <contextily:providers_deepdive>`
for a list of possible tilemap options.

.. GENERATED FROM PYTHON SOURCE LINES 36-47

.. code-block:: Python


    fig = pygmt.Figure()
    fig.tilemap(
        region=[-157.84, -157.8, 21.255, 21.285],
        projection="M12c",
        # Use the CartoDB Positron option from contextily
        source=contextily.providers.CartoDB.Positron,
        frame=Axis(annot=True, tick=True, grid=True),
    )

    fig.show()



.. image-sg:: /gallery/maps/images/sphx_glr_tilemaps_002.png
   :alt: tilemaps
   :srcset: /gallery/maps/images/sphx_glr_tilemaps_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.188 seconds)


.. _sphx_glr_download_gallery_maps_tilemaps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: tilemaps.ipynb <tilemaps.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: tilemaps.py <tilemaps.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: tilemaps.zip <tilemaps.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
